# aqueductcore

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yaml  mkdocs.yml  pyproject.toml  versions.json
.devcontainer/: devcontainer.json
.github/CLA/: cla_info.md  mixed_cla_info.md
.github/ISSUE_TEMPLATE/: ✨-feature-request.md  🐛-bug-report.md
.github/workflows/: automated_release.yaml  backend_pull_request.yml  changelog.yml  demo_docker_images.yaml  dev_docker_image.yaml  dev_docker_images.yaml  docs.yaml  docs_build_releases.yml  docs_pr_preview.yml  frontend_pull_request.yml  license_report.yaml  license_report.yml  pull_request.yaml  pull_request.yml  release.yaml  semantic_pr_title.yaml  semantic_pull_request.yaml  static_analysis_and_tests.yaml  update_automated_release.yaml
alembic/: README  README.md  database-migration-guide.md  env.py
alembic/versions/: 0c7abaa9e2da_remove_tag_id_from_the_relation.py  519343a37f5b_first_migration.py  6d5f957d035c_update_with_created_by_column.py  a15889f46268_tags_primary_key_change.py  a31025856641_.py  c12374978a12_rename_task_id_to_uuid.py  dfefb8ab3912_update_the_structure_of_users_table.py
aqueductcore/: __init__.py
aqueductcore/backend/: constants.py  context.py  errors.py  main.py  session.py  settings.py
aqueductcore/cli/: __init__.py  app.py  commands.py  export.py  exporter.py  importer.py  main.py  models.py  session.py
aqueductcore/frontend/: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  README.md  codegen.ts  package.json  tsconfig.json
ci/: build_dev.sh  build_docker_image.sh  build_release.sh  coverage_report.sh  create_changelog.sh  generate_license_report.sh  license-report-config.json  license_report_template.md  pylint.sh  staticwebapp.config.json  unit_tests.sh
ci/azure-dev/: README.md  docker-compose.yaml  nginx.conf
containers/dev/: Dockerfile  docker-compose.yaml  docker-compose.yml
containers/release/: Dockerfile
containers/release-azure/: Dockerfile  entrypoint.sh
docs/: api-reference.md  cli.md  extensions.md  getting-started.md  index.md  plugins.md  setup.md
envs/: .env.dev  .env.test
extensions/dummy/: manifest.yml
extensions/python-example/: manifest.yml  solve_alpha.py
main/: 404.html  index.html  sitemap.xml
poc/: Dockerfile  PoC - executors.ipynb  tasks.py
scripts/: add_extensions_from.sh  build_coverage_report.sh  build_docs.sh  build_frontend.sh  clean_aqueduct.py  install_packages.sh  populate_data.py  populate_database.py  run_integration_tests.sh  run_pylint.sh  run_unit_tests.sh  start_aqueduct_core.py  start_celery_flower.sh  start_celery_workers.sh  start_ecs_service.py
tests/: conftest.py
v0.0.8/: 404.html  index.html  sitemap.xml
v0.0.9/: 404.html  index.html  sitemap.xml
(+287 files in other folders)
