[tool.poetry]
name = "aqueductcore"
version = "0.0.9"
description = "Aqueduct core web application."
authors = ["Aqueduct Team <aqueduct@riverlane.com>"]
license = "MIT"
readme = "README.md"

exclude = [
    "aqueductcore/frontend"
]

[tool.poetry.dependencies]
python = ">= 3.8,< 3.12"
grpcio = "^1.57"
pydantic = {version = "^2.6",extras = ["email"]}
pydantic-settings = "^2.2"
typing-extensions = "^4.7"
protobuf = "^4.24"
uvicorn = {version = "^0.23",extras = ["standard"]}
fastapi = "^0.110"
strawberry-graphql = {version = "^0.219",extras = ["fastapi"]}
sqlalchemy = {version = "^2.0",extras = ["asyncio"]}
asyncpg = "^0.28"
python-multipart = "^0.0.9"
aiofiles = "^23.2"
streaming-form-data = "^1.13"
gunicorn = "^22.0"
pip-licenses = "^4.3"
pathvalidate = "^3.2"
bcrypt = "^4.1"
typer = "^0.12"
psycopg2-binary = "^2.9"
celery = "^5.4.0"

[tool.poetry.scripts]
aqueduct = "aqueductcore.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
grpcio-tools = "^1.57"
pylint = "^2.17"
yapf = "^0.40"
pytest-grpc = "^0.8"
mypy = "^1.5"
pytest-cov = "^4.1"
pylint-protobuf = "^0.20"
mypy-protobuf = "^3.5"
pip-licenses = "^4.3"
requests = "^2.32"
pytest-asyncio = "^0.21"
httpx = "^0.25"
mkdocs-material = "^9.4"
mike = "^2.0"
aiosqlite = "^0.19"
alembic = "^1.12"

mkdocstrings = {version = "^0.24",extras = ["python"]}
nbconvert = "^7.14"
pytz = "^2024.1"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
